tests/anon_fn_capture_bad.stderr
tests/anon_fn_capture_bad.hop:4:10: error: HOP2118: anonymous function cannot capture local runtime binding 'x'
