tests/anon_fn_capture_bad.hop
fn main() {
	x := 41
	var f fn() int = fn() int {
		return x + 1
	}
	_ = f
}
